--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -67,7 +67,7 @@ header {
   width: 100%;
   padding: 60px 0;
   text-align: center;
-  background-image: url(../../img/banner.webp);
+  background-image: url(../img/banner.webp);
   background-repeat: no-repeat;
   background-size: cover;
   color: $font-color;
