--- a/sass/styles.css
+++ b/sass/styles.css
@@ -30,6 +30,13 @@ header .header__cart-icon {
 header .header__menu-icon img,
 header .header__cart-icon img {
   width: 100%;
+  transition: all 0.6s ease;
+}
+@media (hover: hover) {
+  header .header__menu-icon img:hover,
+  header .header__cart-icon img:hover {
+    transform: scale(0.9);
+  }
 }
 header .header__logo {
   width: 100px;
@@ -123,6 +130,12 @@ header .header__logo {
 }
 .cart__item-remove-btn img {
   width: 100%;
+  transition: all 0.6s ease;
+}
+@media (hover: hover) {
+  .cart__item-remove-btn img:hover {
+    transform: scale(0.9);
+  }
 }
 
 @media (max-width: 820px) {
